-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.0
-
None
QWayland 5.9.0 from git sources cannot be compiled on linux.
There is an error during compilation of qtwayland/src/hardwareintegration/compositor/libhybris-egl-server/libhybriseglserverbufferintegration.cpp
in function
void LibHybrisEglServerBufferIntegration::initializeHardware(QWaylandCompositor *compositor)
line 175:
QtWaylandServer::qt_libhybris_egl_server_buffer::init(compositor->waylandDisplay(), 1);
Error
'class QWaylandCompositor’ has no member named ‘waylandDisplay’
Assuming QWaylandCompositor is defined here qtwayland/src/compositor/compositor_api/qwaylandcompositor.h
There is indeed no member waylandDisplay() but there is a member display() with type ::wl_display
It seems to have been changed 7 months ago in the following commit.
2333c58 - Use the feature system internally. - ::wl_display *waylandDisplay() const; + ::wl_display *display() const;
If you change the source to
QtWaylandServer::qt_libhybris_egl_server_buffer::init(compositor->display(), 1);
It compile again.