Fix missing rename from waylandDisplay to display

QWaylandCompositor::waylandDisplay was previously renamed to display, but the
libhybris implementation was not updated.

Task-number: QTBUG-61183
Change-Id: I80cacb7eeef93375bebd159b676db1147914e8de
Reviewed-by: Jan Arne Petersen <jan.petersen@kdab.com>
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@liri.io>